--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     border: 0.3em solid black;
     border-radius: 10px;
     transition: all .07s ease;
+    cursor: pointer;
 }
 
 .key > kbd {
